--- a/src/components/Show.astro
+++ b/src/components/Show.astro
@@ -189,7 +189,7 @@ const { entryId } = Astro.props;
 
     // Function to download PDF
     function downloadPDF() {
-        const pdfUrl = `https://raw.githubusercontent.com/syrkis/syrkis.com/main/slides/${entryId}.pdf`;
+        const pdfUrl = `https://raw.githubusercontent.com/syrkis/syrkis.com/main/src/content/talks/${entryId}.pdf`;
 
         // Create a temporary anchor element to trigger download
         const link = document.createElement("a");
