--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,7 +1,7 @@
 body {
     font-family: "David Libre", serif;
-    font-size: 1.4em;
-    line-height: 1.5;
+    font-size: 1.5em;
+    line-height: 2.5em;
     margin: 0;
 }
 
@@ -16,6 +16,9 @@ h2 {
 .text {
     text-align: center;
     padding: 10vh 0;
+    width: 700px;
+    max-width: 90%;
+    margin: auto;
 }
 
 body.presentation-mode {
@@ -29,8 +32,8 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 2.5em;
-    font-size: 2em;
+    gap: 1em;
+    font-size: 2rem;
     padding: 1.2em 0;
     background: none;
     border: none;
