--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -4,7 +4,8 @@ import { getCollection } from "astro:content";
 import Layout from "../layouts/Layout.astro";
 import List from "../components/List.astro";
 const items = (await getCollection("works")).filter((x) => !x.data.hidden);
-const contactText = "... your works intro ...";
+const contactText =
+    "Balancing structure with decay, these works explore archival aesthetics through geospatial and organic variations. Limited edition prints are available upon request to";
 ---
 
 <Layout pageType="works">
