--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -180,3 +180,11 @@ a {
     flex-direction: column;
     align-items: center;
 }
+
+.art-descr {
+    text-align: center;
+    padding: 0 0 10vh 0;
+}
+.series {
+    text-align: center;
+}
