website done for now

--- a/src/components/Work.astro
+++ b/src/components/Work.astro
@@ -16,7 +16,7 @@ const { title, year, desc, material, works } = entry.data;
         {title}
     </h2>
     <p class="text">{desc}</p>
-    <div class="works">
+    <div class="series-list">
         <div class="works-grid">
             {
                 works.map((work) => (
