--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -5,7 +5,7 @@ import Layout from "../layouts/Layout.astro";
 import List from "../components/List.astro";
 const items = (await getCollection("works")).filter((x) => !x.data.hidden);
 const contactText =
-    "Balancing structure with decay, these works explore archival aesthetics through geospatial and organic variations. Limited edition prints are available upon request to";
+    "Balancing structure with and, these works explore archival aesthetics through geospatial and organic variations. Limited edition fine-art prints are available upon request to";
 ---
 
 <Layout pageType="works">
